--- a/package.json
+++ b/package.json
@@ -8,6 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@okta/okta-auth-js": "^5.9.1",
+    "@okta/okta-signin-widget": "^5.14.1",
+    "@okta/okta-vue": "^5.0.2",
+    "@vue/reactivity": "^3.2.26",
+    "axios": "^0.24.0",
+    "bootstrap": "^5.1.3",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
@@ -26,6 +32,8 @@
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-vue": "^7.0.0",
+    "sass": "^1.38.0",
+    "sass-loader": "^10.0.0",
     "typescript": "~4.1.5"
   },
   "eslintConfig": {
